# codex-yerhed-starter

./: .gitignore  ACCESS_POLICY.md  AGENTS.md  HEARTBEAT.md  LICENSE  MEMORY.example.md  README.md  SECURITY.md  SOUL.example.md  THREAT_MODEL.md  TOOLS.md  USER.example.md  pyproject.toml
automations/: README.md  codex-automation-specs.md  dream-cycle.md  morning-brief.md  project-refresh.md  weekly-review.md
config/: egress-policy.md  global-bootstrap.md  paths.md  publish-policy.md  update-policy.md
docs/: disable.md  obsidian.md
evals/: README.md  morning-brief.md  project-refresh.md  what-matters-now.md  yerhed-closeout.md
mcp/: server.py
scripts/: brain_search.sh  check_structure.sh  disable_yerhed.sh  git_privacy_guard.sh  init_brain.sh  init_local_context.sh  install_brain_git_guard.sh  install_external_repo_guard.sh  install_git_hooks.sh  install_global_bootstrap.sh  install_hook.sh  install_mcp.sh  install_obsidian_graph_settings.sh  memory_leak_scan.sh  privacy_scan.sh  smoke_fresh_install.sh  smoke_mcp_tools.sh  smoke_what_matters_now.sh  uninstall_brain_git_guard.sh  uninstall_external_repo_guard.sh  uninstall_git_hooks.sh  uninstall_hook.sh
skills/: README.md
templates/brain/: RESOLVER.md  log.md  schema.md
templates/brain/archive/: README.md
templates/brain/companions/: README.md
templates/obsidian/: graph.json.example
tests/: test_dream_cycle_protocol.py  test_hook_bootstrap_scripts.py  test_mcp_tools.py  test_memory_leak_guard_scripts.py  test_obsidian_graph_settings.py  test_safety_docs.py
yerhed_mcp/: disabled.py  hook.py  tools.py
(+11 files in other folders)
